# Vulkan-Profiles

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  OVERVIEW.md  PROFILES.md  README.md  TUTORIAL.md  vk.xml
.reuse/: dep5
device_simulation/: CMakeLists.txt
device_simulation_manual/: CMakeLists.txt  VkLayer_device_simulation_manual.def  VkLayer_device_simulation_manual.json.in  device_simulation.cpp
device_simulation_manual/tests/: CMakeLists.txt  devsim_test_helper.h  test_physical_device_main_property_modification.cpp
doc/: design.vpp  design.vpp.bak_000f  design.vpp.bak_001d
generated-jsoncpp/: jsoncpp.cpp
generator/: CMakeLists.txt  generator.cpp
generator/test/: CMakeLists.txt  test_util.cpp
layer/: .ispell_words  CMakeLists.txt  TUTORIAL.md  VkLayer_khronos_profiles.def  VkLayer_khronos_profiles.json.in  VkLayer_khronos_profiles.map  VkLayer_profiles.def  VkLayer_profiles.json.in  device_simulation.cpp  device_simulation.md  profile_layer_settings.h  profiles.cpp  profiles.h  profiles.md  profiles_interface.cpp  profiles_interface.h  profiles_json.cpp  profiles_json.h  profiles_settings.cpp  profiles_settings.h  profiles_util.cpp  profiles_util.h  vk_layer_table.cpp  vk_layer_table.h
layer-utils/: CMakeLists.txt  vk_layer_settings.cpp  vk_layer_settings.h
layer/sample_configs/: portability_test.json  tiny1.json
layer/sample_configs/sdk_sample_configs/: iOS_gpu_family_3_portability.json  iOS_gpu_family_5_portability.json  macOS_gpu_family_1_portability.json  portability_desktop_1_0.json  portability_desktop_1_2.json  portability_minimum_vulkan_1_0.json  portability_minimum_vulkan_1_1.json  portability_minimum_vulkan_1_2.json  spec_minimum_vulkan_1_0.json  spec_minimum_vulkan_1_1.json  spec_minimum_vulkan_1_2.json
layer/scripts/: gen_all_ext_profile.py
layer/tests/: CMakeLists.txt  devsim_test1_in.json  devsim_test_helper.cpp  devsim_test_helper.h  layer_tests_main.cpp  layer_tests_main.h  layer_validation_tests.cpp  layer_validation_tests.h  manual_devsim_tests.cpp  profiles_test_helper.cpp  profiles_test_helper.h  profiles_test_properties_features_formats.cpp  profiles_tests.cpp  tests.cpp  tests_capabilities.cpp  tests_combine.cpp  tests_combine_intersection.cpp  tests_combine_union.cpp  tests_desktop_portability.cpp  tests_generated.cpp  tests_mechanism.cpp  tests_mechanism_api_version.cpp  tests_mechanism_check_values.cpp  tests_mechanism_format.cpp  tests_mechanism_physical_device_selection.cpp  tests_mechanism_video_profiles.cpp  tests_merged_intersection.cpp  tests_merged_union.cpp  tests_promoted.cpp  tests_util.cpp  vktestframework.cpp  vktestframework.h  vktestframeworkandroid.cpp  vktestframeworkandroid.h
profiles/: CMakeLists.txt  VP_ANDROID_15.json  VP_ANDROID_15_minimums.json  VP_ANDROID_16_minimums.json  VP_ANDROID_1_0_baseline_2022.json  VP_ANDROID_angle_es31.json  VP_ANDROID_baseline.json  VP_ANDROID_baseline_2021.json  VP_ANDROID_baseline_2022.json  VP_ANDROID_baseline_2022.json.  VP_GOOGLE_angle_2022.json  VP_KHR_1_2_roadmap_2022.json  VP_KHR_1_3_roadmap_2022.json  VP_KHR_minimum_requirements.json  VP_KHR_roadmap.json  VP_KHR_roadmap_2022.json  VP_LUNARG_1_1_desktop_portability_2022.json  VP_LUNARG_desktop_baseline_2022.json  VP_LUNARG_desktop_baseline_2022_subset.json  VP_LUNARG_desktop_baseline_config.json  VP_LUNARG_desktop_max_2022.json  VP_LUNARG_desktop_portability_2021.json  VP_LUNARG_desktop_portability_2022.json  VP_LUNARG_minimum_requirements.json
profiles/test/: CMakeLists.txt  test.hpp  test_validate.cpp
profiles/test/data/: VP_KHR_baseline.json  VP_LUNARG_1_1_desktop_portability_2022.json  VP_LUNARG_android_15_minimums.json  VP_LUNARG_desktop_max_2022.json  VP_LUNARG_desktop_max_2023.json  VP_LUNARG_min_requirements.json  VP_LUNARG_test_all.json  VP_LUNARG_test_api.json  VP_LUNARG_test_api_1_0.json  VP_LUNARG_test_api_1_1.json  VP_LUNARG_test_api_1_2.json  VP_LUNARG_test_api_1_2_198.json  VP_LUNARG_test_api_1_3.json  VP_LUNARG_test_api_alternate.json  VP_LUNARG_test_api_generated.json  VP_LUNARG_test_api_version.json  VP_LUNARG_test_api_version_profile.json  VP_LUNARG_test_baseline_formats.json  VP_LUNARG_test_capabilities.json  VP_LUNARG_test_capabilities_optional.json  VP_LUNARG_test_combine_intersect.json  VP_LUNARG_test_combine_intersect1.json  VP_LUNARG_test_combine_intersect2.json  VP_LUNARG_test_combine_union.json  VP_LUNARG_test_combine_union1.json  VP_LUNARG_test_combine_union2.json  VP_LUNARG_test_device_extensions.json  VP_LUNARG_test_device_features.json  VP_LUNARG_test_device_properties.json  VP_LUNARG_test_duplicated.json  VP_LUNARG_test_formats.json  VP_LUNARG_test_generated_name.json  VP_LUNARG_test_host_image_copy.json  VP_LUNARG_test_instance_extensions.json  VP_LUNARG_test_intersect.json  VP_LUNARG_test_promoted_api.json  VP_LUNARG_test_required_profiles.json  VP_LUNARG_test_required_profiles2.json  VP_LUNARG_test_selecting_profile.json  VP_LUNARG_test_structure_complex.json  (+13 more)
profiles/test/data/VP_LUNARG_test_combine_intersect/: VP_LUNARG_test_combine_intersect1.json  VP_LUNARG_test_combine_intersect2.json
profiles/test/data/VP_LUNARG_test_combine_union/: VP_LUNARG_test_combine_union1.json  VP_LUNARG_test_combine_union2.json
profiles/test/data/VP_LUNARG_test_host_image_copy/: local_gpu.json  remote_gpu.json
profiles/test/data/VP_LUNARG_test_profile_requirements/: VP_LUNARG_test_profile_b.json  vulkan_profiles.cpp  vulkan_profiles.h  vulkan_profiles.hpp
profiles/test/data/union/: union_data1.json
schema/: profile.json  profile2.json  profile_schema.json  profiles-1.1.100.json  (+56 more)
scripts/: CMakeLists.txt  combine_profiles.py  expression_parsing.py  gen_all_ext_profile.py  gen_layer.py  gen_profile.py  gen_profiles_file.py  gen_profiles_layer.py  gen_profiles_solution.py  gen_profiles_tests.py  gen_unit_tests.py  genvp.py  known_good.cmake  known_good.json  profiles.py  update_deps.py
scripts/source/: expression_parsing.py  profiles_parsing.py  vk_xml_parsing.py
scripts/tests/: test_expression_tree.py  test_json.py  test_util.py  test_vk_xml_parsing.py
(+169 files in other folders)
